--- a/src/views/Landing/LandingHero/landingHero.scss
+++ b/src/views/Landing/LandingHero/landingHero.scss
@@ -1,7 +1,12 @@
+@use '../../../assets/variables';
+
+
 .landing-hero {
   min-height: 100vh;
-  width: 100%;
+  max-width: 100%;
   flex-direction: column;
+  align-items: center;
+  padding: 0 variables.$rhythm * 6;
   justify-content: center;
 }
 
