--- a/src/views/Landing/LandingIntro/landingIntro.scss
+++ b/src/views/Landing/LandingIntro/landingIntro.scss
@@ -1,2 +1,12 @@
+@use '../../../assets/variables';
+
 .landing-intro {
+  min-height: 400px;
+  max-width: 100%;
+  min-width: 100%;
+  flex-direction: column;
+  align-items: center;
+  // padding: 0 variables.$rhythm * 6;
+  justify-content: center;
+  background-color: aquamarine;
 }
